--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
+<!-- Komentar aja -->
+
 <body>
     <div class="content">
         <div class="deskripsi">
